2002-10-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Implemented and documented new MacOS-X methods -
	([-performSelectorOnMainThread:withObject:waitUntilDone:modes:])
	and ([-performSelectorOnMainThread:withObject:waitUntilDone:])

Wed Oct 30 03:14:34 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/objc-load.h: Added copyright notice.
	(objc_get_symbol_path): Declare to take a Category *, not a struct
	objc_category *, argument; documented.
	* Source/objc-load.m: Include config.h first.  Define _GNU_SOURCE
	if HAVE_DLADDR is defined.
	(objc_get_symbol_path): Fixed crash with classes or categories
	with long names.  Updated declaration.
	* config/objc-sys-dynamic.m4 (OBJC_SYS_DYNAMIC_LINKER): Print a
	message displaying the type of dynamic linker found.  Add -ldl on
	the link line for linux-gnu and other systems, so that dladdr() is
	actually found.  With the 'simple' linker, print a message saying
	if we found dladdr() or not.
	(OBJC_SYS_DYNAMIC): Historical unused macro removed.
	* configure: Regenerated.

2002-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: include statvfs.h if available.

2002-10-26  Adam Fedor  <fedor@gnu.org>

	* Source/NSException.m: Document.
	* Source/NSFileHandle.m: Partial Documentation.
	* Source/NSObject.m: Fix typo in docs.

2002-10-25  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBundle.m ([NSBundle -load]): set _codeLoaded before loading
	the bundle.

2002-10-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Avoid duplication of method comments when
	parsing the same file as both header and source.

2002-10-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m: ([-split:]) In links generated from class and
	method specifications in square brackets, place a space between the
	class and the method name.
	* Tools/gsdoc-1_0_0.dtd: Corrected minor entity errors.

2002-10-21  Adam Fedor  <fedor@gnu.org>
